; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_crltest.c_test_known_critical_crl.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_crltest.c_test_known_critical_crl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kKnownCriticalCRL = common dso_local global i32 0, align 4
@test_leaf = common dso_local global i32 0, align 4
@test_root = common dso_local global i32 0, align 4
@X509_V_FLAG_CRL_CHECK = common dso_local global i32 0, align 4
@X509_V_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_known_critical_crl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_known_critical_crl() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @kKnownCriticalCRL, align 4
  %4 = call i32* @CRL_from_strings(i32 %3)
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = call i64 @TEST_ptr(i32* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %18

8:                                                ; preds = %0
  %9 = load i32, i32* @test_leaf, align 4
  %10 = load i32, i32* @test_root, align 4
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @make_CRL_stack(i32* %11, i32* null)
  %13 = load i32, i32* @X509_V_FLAG_CRL_CHECK, align 4
  %14 = call i32 @verify(i32 %9, i32 %10, i32 %12, i32 %13)
  %15 = load i32, i32* @X509_V_OK, align 4
  %16 = call i64 @TEST_int_eq(i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br label %18

18:                                               ; preds = %8, %0
  %19 = phi i1 [ false, %0 ], [ %17, %8 ]
  %20 = zext i1 %19 to i32
  store i32 %20, i32* %2, align 4
  %21 = load i32*, i32** %1, align 8
  %22 = call i32 @X509_CRL_free(i32* %21)
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32* @CRL_from_strings(i32) #1

declare dso_local i64 @TEST_ptr(i32*) #1

declare dso_local i64 @TEST_int_eq(i32, i32) #1

declare dso_local i32 @verify(i32, i32, i32, i32) #1

declare dso_local i32 @make_CRL_stack(i32*, i32*) #1

declare dso_local i32 @X509_CRL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
